<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".auth.RegistrationActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:layout_editor_absoluteY="25dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/igaslogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="45dp"
                android:drawableStart="@drawable/person_black_24dp"
                android:drawableLeft="@drawable/person_black_24dp"
                android:hint="@string/name"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/light_gray"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo2" />

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:hint="@string/email"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/light_gray"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/person_black_24dp"
                android:drawableLeft="@drawable/person_black_24dp"
                android:hint="@string/phone"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/light_gray"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/regEmail"
                app:layout_constraintStart_toStartOf="@+id/regEmail"
                app:layout_constraintTop_toBottomOf="@+id/regEmail" />

            <EditText
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/person_black_24dp"
                android:drawableLeft="@drawable/person_black_24dp"
                android:hint="@string/location"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/light_gray"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/phone"
                app:layout_constraintStart_toStartOf="@+id/phone"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <!--<EditText-->
                <!--android:id="@+id/estate"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:background="@drawable/edit_text_background"-->
                <!--android:drawableStart="@drawable/person_black_24dp"-->
                <!--android:drawableLeft="@drawable/person_black_24dp"-->
                <!--android:hint="@string/estate"-->
                <!--android:inputType="textAutoComplete"-->
                <!--app:layout_constraintEnd_toEndOf="@+id/location"-->
                <!--app:layout_constraintStart_toStartOf="@+id/location"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/location" />-->

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/lock_outline_black_24dp"
                android:drawableLeft="@drawable/lock_outline_black_24dp"
                android:drawablePadding="4dp"
                android:hint="@string/password"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/light_gray"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/location"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <EditText
                android:id="@+id/reg_confirm_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/lock_outline_black_24dp"
                android:drawableLeft="@drawable/lock_outline_black_24dp"
                android:drawablePadding="4dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/light_gray"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/reg_password"
                app:layout_constraintStart_toStartOf="@+id/reg_password"
                app:layout_constraintTop_toBottomOf="@+id/reg_password" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkboxTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                app:layout_constraintBottom_toTopOf="@+id/reg_confirm_password"
                app:layout_constraintStart_toStartOf="@+id/reg_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="15dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/checkboxTerms"
                app:layout_constraintStart_toStartOf="@+id/checkboxTerms"
                app:layout_constraintTop_toBottomOf="@+id/checkboxTerms" />

            <Button
                android:id="@+id/waitButton"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/please_wait"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/checkboxTerms"
                app:layout_constraintStart_toStartOf="@+id/checkboxTerms"
                app:layout_constraintTop_toBottomOf="@+id/checkboxTerms" />

            <TextView
                android:id="@+id/alreadyMember"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/have_an_account_sign_in"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signupButton"
                app:layout_constraintStart_toStartOf="@+id/signupButton"
                app:layout_constraintTop_toBottomOf="@+id/signupButton"
                app:layout_constraintVertical_bias="0.221" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>