<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".auth.LoginActivity"
        tools:layout_editor_absoluteY="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/igaslogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="294dp"
            android:layout_height="40dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="68dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/lock_outline_black_24dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/lock_outline_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/login_email"
            app:layout_constraintStart_toStartOf="@+id/login_email"
            app:layout_constraintTop_toBottomOf="@+id/login_email" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkboxShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Password"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="4dp"
            android:text="Forgot Your Password?"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/checkboxShowPassword"
            app:layout_constraintTop_toBottomOf="@+id/checkboxShowPassword" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <Button
            android:id="@+id/please_wait_btn"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/please_wait"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_btn"
            app:layout_constraintHorizontal_bias="0.594"
            app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            app:layout_constraintVertical_bias="0.012" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>